@@ -92,9 +92,7 @@ _Description: Choose a mirror
 
 Template: mirror/http/countries
 Type: select
-Listorder: lexicographic
-#  Translators, ignore leading exclamation mark,
-__Choices: !enter information manually, AT, AU, BE, BG, BR, BY, CA, CH, CL, CN, CR, CZ, DE, DK, EE, ES, FI, FR, GB, GR, HK, HR, HU, ID, IE, IL, IN, IS, IT, JP, KR, LT, LU, LV, MX, NI, NL, NO, NZ, PL, PT, RO, RU, SE, SG, SI, SK, TR, TW, UA, US, ZA
+__Choices: enter information manually, AT, AU, BE, BG, BR, BY, CA, CH, CL, CN, CR, CZ, DE, DK, EE, ES, FI, FR, GB, GR, HK, HR, HU, ID, IE, IL, IN, IS, IT, JP, KR, LT, LU, LV, MX, NI, NL, NO, NZ, PL, PT, RO, RU, SE, SG, SI, SK, TR, TW, UA, US, ZA
 #  Translators, you must not translate this value, but you can change it
 #  to one of those listed above, e.g. msgstr "GB".  Square brackets are
 #  ignored and appear here only to distinguish this msgid from the same
@@ -106,9 +104,7 @@ _Description: Use a mirror from what country?
 
 Template: mirror/ftp/countries
 Type: select
-Listorder: lexicographic
-#  Translators, ignore leading exclamation mark,
-__Choices: !enter information manually, AT, AU, BE, BG, BR, BY, CA, CH, CL, CN, CR, CZ, DE, DK, EE, ES, FI, FR, GB, GR, HK, HR, HU, ID, IE, IN, IS, IT, JP, KR, LT, LU, LV, MX, NL, NO, NZ, PL, PT, RO, RU, SE, SG, SI, SK, TH, TR, TW, UA, US, ZA
+__Choices: enter information manually, AT, AU, BE, BG, BR, BY, CA, CH, CL, CN, CR, CZ, DE, DK, EE, ES, FI, FR, GB, GR, HK, HR, HU, ID, IE, IN, IS, IT, JP, KR, LT, LU, LV, MX, NL, NO, NZ, PL, PT, RO, RU, SE, SG, SI, SK, TH, TR, TW, UA, US, ZA
 #  Translators, you must not translate this value, but you can change it
 #  to one of those listed above, e.g. msgstr "GB".  Square brackets are
 #  ignored and appear here only to distinguish this msgid from the same
